<resources>
    <string name="Female">She</string>
    <string name="Male">He</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_your_loop">About your Loop</string>
    <string name="account">Account</string>
    <string name="account_activation_success">Account confirmed</string>
    <string name="account_not_found_edit">Edit</string>
    <string name="account_not_found_new_account">New Account</string>
    <string name="account_not_found_text">We couldn\'t find a Jibo account with this email. Would you like to create a new account or use a different email address?</string>
    <string name="account_not_found_title">Account Not Found</string>
    <string name="account_type">com.jibo</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_help">HELP</string>
    <string name="action_next">Next</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_skip">SKIP</string>
    <string name="action_support">SUPPORT</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="add_preferred_name">Add Preferred Name</string>
    <string name="age_13_or_older">13 years or older</string>
    <string name="age_under_13">Under 13 years old</string>
    <string name="and">and</string>
    <string name="androidPushNotificationClientId" />
    <string name="anyone_you_tag">Anyone you tag will get a special message notification.</string>
    <string name="api_version">v39.0</string>
    <string name="app_name">Jibo</string>
    <string name="app_package">com.salesforce.androidsdk.smartstore</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="as_a_jibo_owner">As a Jibo owner, deleting your account means:</string>
    <string name="avatar_set_failure">Something went wrong!</string>
    <string name="avatar_set_progress">Setting Jibo\' image</string>
    <string name="avatar_set_success">Image set complete</string>
    <string name="back_to_tips_menu">Back to Tips menu</string>
    <string name="backup_passphrase">Passphrase</string>
    <string name="backup_restore_footer_hint">This may be different than your account password</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brightness_hint">If Jibo is having trouble connecting, use this slider to adjust your screen brightness.</string>
    <string name="btnEnterNetworkManually">Manually enter network</string>
    <string name="btnSelectOtherNetwork">Change mobile Wi-Fi network</string>
    <string name="btnSend">Send</string>
    <string name="btnWiFiSettings">Select a Wi-Fi network</string>
    <string name="btn_edit_static_ip_options">STATIC IP OPTIONS</string>
    <string name="btn_show_static_ip_options">STATIC IP OPTIONS</string>
    <string name="button_add_email">ADD EMAIL</string>
    <string name="button_add_holidays">Add Jibo’s holidays</string>
    <string name="button_add_phone">Add Phone</string>
    <string name="button_add_phone_number">Add Phone Number</string>
    <string name="button_continue_deleting_account">Continue deleting account</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="button_detailed_troubleshooting">Detailed troubleshooting</string>
    <string name="button_edit_wifi">EDIT WI-FI INFORMATION</string>
    <string name="button_get_support">Get support</string>
    <string name="button_help">Help</string>
    <string name="button_i_see_screen_above">I see that screen on Jibo</string>
    <string name="button_invite">INVITE</string>
    <string name="button_invite_loop_members_button">Invite people from contacts</string>
    <string name="button_lets_get_started">Get started</string>
    <string name="button_login">Log In</string>
    <string name="button_logout">LOG OUT</string>
    <string name="button_loop">Loop</string>
    <string name="button_mac_filtering">MAC Address filtering</string>
    <string name="button_media">Gallery</string>
    <string name="button_messages">Feed</string>
    <string name="button_next_code">Next Code</string>
    <string name="button_no_maybe_later">No, maybe later</string>
    <string name="button_open_email_app">Open Email App</string>
    <string name="button_permanently_delete_account">Permanently delete account</string>
    <string name="button_previous">Previous</string>
    <string name="button_reply">TAG BACK</string>
    <string name="button_resend_password_reset_email">RESEND EMAIL</string>
    <string name="button_resend_verification_email">RESEND VERIFICATION EMAIL</string>
    <string name="button_restart_wi_fi_setup">Restart Wi-Fi setup</string>
    <string name="button_return_to_settings">Return to settings</string>
    <string name="button_send_email_invite">Send Email Invite</string>
    <string name="button_send_new_code">Send a new code</string>
    <string name="button_set_time">Set Time</string>
    <string name="button_setup_static_ip">Set up static IP address</string>
    <string name="button_support_error_1">My Jibo says “Can’t connect to Wi-Fi network”</string>
    <string name="button_support_error_2">My Jibo says “Can’t get IP address from router”</string>
    <string name="button_support_error_3">I got a different error message</string>
    <string name="button_support_error_4">Pointing my QR code at Jibo did nothing</string>
    <string name="button_tips">Tips</string>
    <string name="button_try_again">Looks good, try again</string>
    <string name="button_view_invite">View Invite</string>
    <string name="button_wifi_jibo_prep_step1_button">I removed his screen cover</string>
    <string name="button_wifi_jibo_prep_step2_button">I plugged him in</string>
    <string name="button_wifi_jibo_prep_step3_button">I powered him up</string>
    <string name="cancel">Cancel</string>
    <string name="case_discard_case_confirmation_dialog_message_text">You will lose the information entered into this form.</string>
    <string name="case_notification_channel_id">case_updated_channel</string>
    <string name="case_notification_channel_name">Case Updated</string>
    <string name="case_submitted_text">Thank you!\n\nYour message has been sent to Jibo Customer Care, and a digital receipt and case number have been sent to your email address.\n\nThanks for your patience. be hearing from us soon.</string>
    <string name="cases_cancel_button_text">Cancel</string>
    <string name="cases_case_create_error_snackbar_text">Sending failed</string>
    <string name="cases_case_created_success_message_text">Your message has been sent to our support team. We will respond as soon as we can. Thank you!</string>
    <string name="cases_case_feed_default_title_text">Case #%1$s</string>
    <string name="cases_case_list_item_removed_snackbar_message_text">Case resolved</string>
    <string name="cases_case_list_out_of_date_snackbar_text">The case list is out of date.</string>
    <string name="cases_case_list_view_empty_message_text">Your case inbox is empty</string>
    <string name="cases_case_publisher_view_title">Contact Support</string>
    <string name="cases_close_button_text">Close</string>
    <string name="cases_continue_button_text">Continue</string>
    <string name="cases_create_new_case_button_content_description">Create a new case</string>
    <string name="cases_creating_case_progress_dialog_message_text">Please Wait</string>
    <string name="cases_creating_case_progress_dialog_title_text">Sending…</string>
    <string name="cases_discard_case_confirmation_dialog_title_text">Discard Case?</string>
    <string name="cases_generic_error_subtitle_text">Please try again or contact the administrator</string>
    <string name="cases_generic_error_title_text">Oops, Something went wrong…</string>
    <string name="cases_horizontal_rule_today_text">Today</string>
    <string name="cases_list_view_error_subtitle_text">Unable to load your case list.</string>
    <string name="create_account_footer2">I agree to our %1$s &amp; %2$s</string>
    <string name="custom_holidays_date_hint">Choose a date</string>
    <string name="custom_holidays_date_title">Date</string>
    <string name="custom_holidays_name_hint">Choose a name</string>
    <string name="custom_holidays_name_title">Holiday name</string>
    <string name="header_wi_fi_network_password">Password</string>
    <string name="header_wi_fi_network_ssid">WI-FI NETWORK NAME</string>
    <string name="hint_wifi_password">\'s Password</string>
    <string name="hint_wifi_ssid">Network Name (SSID)</string>
    <string name="label_enter_ssid_prefix">Enter the exact name of the Wi-Fi network you want Jibo to use.</string>
    <string name="label_wifi_password">If the network has no password, leave blank.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="salesforce_message_input_hint">Type a message</string>
    <string name="salesforce_select_photo_content_description">Select a photo</string>
    <string name="salesforce_send_message_content_description">Send message</string>
    <string name="text_invite_loop_members_info1">Jibo’s Loop is the people he\nrecognizes by face and voice—it’s the\npeople who are most special to him.</string>
    <string name="text_invite_loop_members_info2">Giving Jibo access to your contacts will\nimport them from your address book, so\nyou can easily invite them to your Loop.</string>
    <string name="text_invite_loop_members_title">Invite Loop members</string>
    <string name="text_new_password_info2">Passwords must be %1$s and include one %2$s, %3$s and %4$s.</string>
</resources>