<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBackgrounds"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.jibo.p019ui.view.proxima.CustomFontEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_email"
        android:maxLength="80"
        android:inputType="textEmailAddress"
        style="@style/EditText"/>
    <com.jibo.p019ui.view.proxima.CustomFontEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        style="@style/EditText"/>
    <com.jibo.p019ui.view.proxima.CustomFontTextView
        android:id="@+id/validation_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_new_password_info2"
        style="@style/SectionFooter"/>
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <CheckBox
            android:id="@android:id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <com.jibo.p019ui.view.proxima.CustomFontTextView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/create_account_footer2"
            android:maxLines="1"
            style="@style/SectionFooter"/>
    </LinearLayout>
</LinearLayout>
