<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/salesforce_contrast_inverted"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v4.widget.Space
        android:id="@+id/salesforce_message_input_left_space"
        android:layout_width="@dimen/salesforce_message_feed_horizontal_margin"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/salesforce_select_photo_button"
        android:background="#00000000"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/salesforce_select_photo_content_description"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/salesforce_message_input_left_space"
        app:srcCompat="@drawable/salesforce_ic_camera"/>
    <com.salesforce.android.service.common.p023ui.views.SalesforceEditText
        android:textColorHint="@color/salesforce_contrast_secondary"
        android:gravity="center_vertical"
        android:id="@+id/salesforce_message_input"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/salesforce_message_input_hint"
        android:inputType="textAutoCorrect"
        android:imeOptions="flagNoExtractUi|actionSend"
        android:imeActionId="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/salesforce_select_photo_button"
        app:layout_constraintRight_toLeftOf="@+id/salesforce_send_message_button"
        style="@style/SalesforceStyleText"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/salesforce_send_message_button"
        android:background="#00000000"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/salesforce_send_message_content_description"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:layout_marginEnd="@dimen/salesforce_message_feed_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/salesforce_message_input"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/salesforce_ic_message_send"/>
</android.support.constraint.ConstraintLayout>
